--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <!-- Bootstrap Styles-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  <link rel="stylesheet" href="resources/styles/styles.css">
+
   <!-- INCLUDE STYLES FILE HERE -->
-  <link href="resources/styles/styles.css">
+  <link rel="stylesheet" href="resources/styles/styles.css">
 </head>
 
 <body>
@@ -20,11 +20,22 @@
       Marco Bahns
     </h1>
 
-<img src="resources/images/profile_pic.jpg">    
+    <img src="resources/images/profile_pic.jpg">
   </div>
 
+  <div class="section" id="personalBackground">
+    <h2>
+      Personal Background
+    </h2>
+    <p>
+    <ul>
+      <li>Lakota West High School</li>
+      <li>Cincinnati State Technical and Community College</li>
+    </ul>
+    </p>
+  </div>
   <!-- INCLUDE SCRIPTS FILE HERE -->
-<script src="resources/scripts/index.js"></script>
+  <script src="resources/scripts/index.js"></script>
   <!-- Bootstrap Scripts-->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
