--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Marco Bahns</title>
+
   <!-- Bootstrap Styles-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
@@ -16,17 +18,14 @@
 <body>
   <!-- WORK FROM INSIDE THIS CONTAINER-->
   <div class="container">
-    <h1>
-      Marco Bahns
-    </h1>
+    <h1>Marco Bahns</h1>
 
     <img src="resources/images/profile_pic.jpg">
   </div>
 
   <div class="section" id="personalBackground">
-    <h2>
-      Personal Background
-    </h2>
+    <h2>Personal Background</h2>
+
     <p>
     <ul>
       <li>Lakota West High School</li>
@@ -34,8 +33,21 @@
     </ul>
     </p>
   </div>
+
+  <div class="section" id="experience">
+    <h2>Experience</h2>
+
+    <p>
+    <ol>
+      <li>Little Caesars</li>
+      <li>Chipotle</li>
+      </ul>
+      </p>
+  </div>
+
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
+
   <!-- Bootstrap Scripts-->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
