added programming languages section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
       </p>
   </div>
 
+  <div class="section" id="programmingLanguages">
+    <h2>Programming Languages</h2>
+
+    <p>
+    <ol>
+      <li>Java</li>
+      <li>C++</li>
+      <li>Python</li>
+      </ul>
+      </p>
+  </div>
+
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
 
