added achievements section

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <ol>
       <li>Little Caesars</li>
       <li>Chipotle</li>
-      </ul>
-      </p>
+    </ol>
+    </p>
   </div>
 
   <div class="section" id="programmingLanguages">
@@ -53,8 +53,19 @@
       <li>Java</li>
       <li>C++</li>
       <li>Python</li>
-      </ul>
-      </p>
+    </ol>
+    </p>
+  </div>
+
+  <div class="section" id="achievements">
+    <h2>Achievements</h2>
+
+    <p>
+    <ul>
+      <li>Employee of the Month</li>
+      <li>Harry Potter Trivia Champion</li>
+    </ul>
+    </p>
   </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
