added games section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
     </p>
   </div>
 
+  <div class="section" id="games">
+    <h2>Favorite Games</h2>
+
+    <p>
+    <ul>
+      <li>The Witcher 3</li>
+      <li>Fallout: New Vegas</li>
+    </ul>
+    </p>
+  </div>
+
   <!-- INCLUDE SCRIPTS FILE HERE -->
   <script src="resources/scripts/index.js"></script>
 
