--- a/index.html
+++ b/index.html
@@ -20,63 +20,63 @@
   <div class="container">
     <h1>Marco Bahns</h1>
 
-    <img src="resources/images/profile_pic.jpg">
-  </div>
+    <img class="center" src="resources/images/profile_pic.jpg">
 
-  <div class="section" id="personalBackground">
-    <h2>Personal Background</h2>
+    <div class="section" id="personalBackground">
+      <h2>Personal Background</h2>
 
-    <p>
-    <ul>
-      <li>Lakota West High School</li>
-      <li>Cincinnati State Technical and Community College</li>
-    </ul>
-    </p>
-  </div>
+      <p>
+      <ul>
+        <li>Lakota West High School</li>
+        <li>Cincinnati State Technical and Community College</li>
+      </ul>
+      </p>
+    </div>
 
-  <div class="section" id="experience">
-    <h2>Experience</h2>
+    <div class="section" id="experience">
+      <h2>Experience</h2>
 
-    <p>
-    <ol>
-      <li>Little Caesars</li>
-      <li>Chipotle</li>
-    </ol>
-    </p>
-  </div>
+      <p>
+      <ol>
+        <li>Little Caesars</li>
+        <li>Chipotle</li>
+      </ol>
+      </p>
+    </div>
 
-  <div class="section" id="programmingLanguages">
-    <h2>Programming Languages</h2>
+    <div class="section" id="programmingLanguages">
+      <h2>Programming Languages</h2>
 
-    <p>
-    <ol>
-      <li>Java</li>
-      <li>C++</li>
-      <li>Python</li>
-    </ol>
-    </p>
-  </div>
+      <p>
+      <ol>
+        <li>Java</li>
+        <li>C++</li>
+        <li>Python</li>
+      </ol>
+      </p>
+    </div>
 
-  <div class="section" id="achievements">
-    <h2>Achievements</h2>
+    <div class="section" id="achievements">
+      <h2>Achievements</h2>
 
-    <p>
-    <ul>
-      <li>Employee of the Month</li>
-      <li>Harry Potter Trivia Champion</li>
-    </ul>
-    </p>
-  </div>
+      <p>
+      <ul>
+        <li>Employee of the Month</li>
+        <li>Harry Potter Trivia Champion</li>
+      </ul>
+      </p>
+    </div>
 
-  <div class="section" id="games">
-    <h2>Favorite Games</h2>
+    <div class="section" id="games">
+      <h2>Favorite Games</h2>
 
-    <p>
-    <ul>
-      <li>The Witcher 3</li>
-      <li>Fallout: New Vegas</li>
-    </ul>
-    </p>
+      <p>
+      <ul>
+        <li>The Witcher 3</li>
+        <li>Fallout: New Vegas</li>
+      </ul>
+      </p>
+    </div>
   </div>
 
   <!-- INCLUDE SCRIPTS FILE HERE -->
